arreglos finales de diseño para entrega del proyecto

--- a/index.html
+++ b/index.html
@@ -230,21 +230,21 @@
         </h2>
       </div>
       <div class="col-lg-8 col-xs-12 footer-rrss">
-        <a href="https://www.facebook.com/" target="_blank">
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener">
           <img
             class="logo-rrss"
             src="./img/logo-de-facebook.png"
             alt="fb_logo"
           />
         </a>
-        <a href="https://www.instagram.com" target="_blank">
+        <a href="https://www.instagram.com" target="_blank" rel="noopener">
           <img
             class="logo-rrss"
             src="./img/logotipo-de-instagram.png"
             alt="ig_logo"
           />
         </a>
-        <a href="https://www.whatsapp.com" target="_blank">
+        <a href="https://www.whatsapp.com" target="_blank" rel="noopener">
           <img
             class="logo-rrss"
             src="./img/logotipo-de-whatsapp.png"
