--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -95,30 +95,42 @@
       </nav>
     </header>
     <main class="container-fluid-main">
-      <div class="row carousel--container">
-        <div class="col-12 carousel--container--item">
-          <div
-            id="carouselExampleSlidesOnly"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
-              </div>
-              <div class="carousel-item">
-                <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
-              </div>
-              <div class="carousel-item">
-                <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
+      <div class="row container-main">
+        <div class="col-lg-6 col-md-12 carousel--container">
+          <div class="carousel--container--item">
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="./img/child.jpg"
+                    class="d-block w-100"
+                    alt="slide1"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/op.jpg"
+                    class="d-block w-100"
+                    alt="img_oftalmologa"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="./img/or.jpg"
+                    class="d-block w-100"
+                    alt="img_oftalmologo"
+                  />
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="card--container">
-        <div class="row">
-          <div class="col-lg-3 col-md-12 card--container--card">
+        <div class="col-lg-6 col-md-12 card--container">
+          <div class="col-lg-4 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">QUIENES SOMOS</h5>
               <p class="card-text">
@@ -130,7 +142,7 @@
               >
             </div>
           </div>
-          <div class="col-lg-3 col-md-12 card--container--card">
+          <div class="col-lg-4 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">TRATAMIENTOS</h5>
               <p class="card-text">
@@ -143,16 +155,7 @@
               <a href="cirugias.html" class="card-link">Ver Cirugías</a>
             </div>
           </div>
-          <div class="col-lg-3 col-md-12 card--container--card">
-            <div class="card-body">
-              <h5 class="card-title">TECNOLOGÍA</h5>
-              <p class="card-text">
-                Contamos con equipamiento de última tecnología y un equipo
-                médico calificado y de gran trayectoria y calidez.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-12 card--container--card">
+          <div class="col-lg-4 col-md-12 card--container--card">
             <div class="card-body">
               <h5 class="card-title">ALCANCE</h5>
               <p class="card-text">
@@ -179,21 +182,21 @@
           </h2>
         </div>
         <div class="col-lg-8 col-xs-12 footer-rrss">
-          <a href="https://www.facebook.com/" target="_blank">
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener">
             <img
               class="logo-rrss"
               src="./img/logo-de-facebook.png"
               alt="fb_logo"
             />
           </a>
-          <a href="https://www.instagram.com" target="_blank">
+          <a href="https://www.instagram.com" target="_blank" rel="noopener">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-instagram.png"
               alt="ig_logo"
             />
           </a>
-          <a href="https://www.whatsapp.com" target="_blank">
+          <a href="https://www.whatsapp.com" target="_blank" rel="noopener">
             <img
               class="logo-rrss"
               src="./img/logotipo-de-whatsapp.png"
