arreglos finales de diseño para entrega del proyecto

--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -163,8 +163,19 @@
                 integral de agendamiento de turnos online y acceso a historia
                 clínica.
               </p>
-              <a href="#" class="card-link">Ver Prepagas y Obra Social</a>
             </div>
+          </div>
+          <hr />
+          <div class="prepagas">
+            <h5>OSDE</h5>
+            <h5>SWISS MEDICAL</h5>
+            <h5>OMINT</h5>
+            <h5>GALENO</h5>
+            <h5>MEDICUS</h5>
+            <h5>SANCOR SALUD</h5>
+            <h5>MEDIFÉ</h5>
+            <h5>PAMI</h5>
+            <h5>OBRAS SOCIALES</h5>
           </div>
         </div>
       </div>
