arreglos finales de diseño para entrega del proyecto

--- a/index.html
+++ b/index.html
@@ -193,8 +193,14 @@
               <option value="1">Osde</option>
               <option value="2">Swiss Medical</option>
               <option value="3">Omint</option>
-              <option value="4">Particular</option>
-              <option value="5">Otros</option>
+              <option value="4">Galeno</option>
+              <option value="5">Medicus</option>
+              <option value="6">Sancor Salud</option>
+              <option value="7">Medifé</option>
+              <option value="8">Pami</option>
+              <option value="9">Obra Social</option>
+              <option value="10">Particular</option>
+              <option value="11">Otros</option>
             </select>
             <div class="form-check form-switch mt-5">
               <input
